--- a/example.html
+++ b/example.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="lib/toast/styles.min.css">
 	<title>NEOPAY SDK Example</title>
 </head>
 
@@ -14,8 +13,7 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script neopay-sdk type="text/javascript" src="sdk/neopay-sdk.js"></script>
-<script toast type="text/javascript" src="lib/toast/index.min.js"></script>
+<script neopay-sdk type="text/javascript" src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk/sdk/neopay-sdk.min.js"></script>
 <script>
 	$(document).ready(function () {
 		const configUI = {
