--- a/example.html
+++ b/example.html
@@ -9,13 +9,21 @@
 </head>
 
 <body>
-	<button onclick="onPay()">Thanh toán</button>
+	<button onclick="onPayWithPopup()">Thanh toán (Popup)</button>
+	<br />
+	<br />
+	<button onclick="onPayWithRedirect()">Thanh toán (Redirect)</button>
+	<br />
+	<br />
+	<button onclick="onPayWithDupliceOrderId()">Thanh toán (Mã đơn hàng bị trùng)</button>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script neopay-sdk type="text/javascript" src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk/sdk/neopay-sdk.min.js"></script>
+<script neopay-sdk type="text/javascript"
+	src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk@latest/sdk/neopay-sdk.min.js"></script>
 <script>
 	$(document).ready(function () {
+		const neo_PaymmentBaseUrl = "https://uat-api.neopay.vn/pg";
 		const configUI = {
 			neo_HiddenHeader: false,
 			neo_HiddenFooter: true,
@@ -33,11 +41,11 @@
 				console.log(data)
 			}
 		}
-		neopaySDK.init(configUI, callbacks);
+		neopaySDK.init(neo_PaymmentBaseUrl, configUI, callbacks);
 	})
-	function onPay() {
+	function onPayWithPopup() {
 		const config = {
-			neo_MerchantCode: 'KCQQYR',
+			neo_MerchantCode: 'HUYEN1',
 			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
 			neo_Currency: 'VND',
 			neo_Locale: 'vi',
@@ -45,14 +53,56 @@
 			neo_Command: 'PAY',
 			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
 			neo_MerchantTxnID: 'T23343243',
-			neo_OrderID: 'DHH0000A1000111121127',
-			neo_OrderInfo: `Thanh toán ĐH DH00001`,
+			neo_OrderID: `DH${`${Date.now()}`.slice(-8)}`,
+			neo_OrderInfo: `Thanh toán ĐH Test`,
 			neo_Title: 'Thanh toán',
 			neo_ReturnURL: "https://www.google.com/",
 			neo_AgainURL: "https://www.google.com/",
 			neo_ViewType: "POPUP", //POPUP | REDIRECT
 		};
-		const hashKey = "AD11DBC9D3A84E50B6D7F72111993AD1";
+		const hashKey = "123456";
+		neopaySDK.pay(config, hashKey);
+	}
+
+	function onPayWithRedirect() {
+		const config = {
+			neo_MerchantCode: 'HUYEN1',
+			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
+			neo_Currency: 'VND',
+			neo_Locale: 'vi',
+			neo_Version: '1',
+			neo_Command: 'PAY',
+			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
+			neo_MerchantTxnID: 'T23343243',
+			neo_OrderID: `DH${`${Date.now()}`.slice(-8)}`,
+			neo_OrderInfo: `Thanh toán ĐH Test`,
+			neo_Title: 'Thanh toán',
+			neo_ReturnURL: "https://www.google.com/",
+			neo_AgainURL: "https://www.google.com/",
+			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
+		};
+		const hashKey = "123456";
+		neopaySDK.pay(config, hashKey);
+	}
+
+	function onPayWithDupliceOrderId() {
+		const config = {
+			neo_MerchantCode: 'HUYEN1',
+			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
+			neo_Currency: 'VND',
+			neo_Locale: 'vi',
+			neo_Version: '1',
+			neo_Command: 'PAY',
+			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
+			neo_MerchantTxnID: 'T23343243',
+			neo_OrderID: `DH001`,
+			neo_OrderInfo: `Thanh toán ĐH DH001`,
+			neo_Title: 'Thanh toán',
+			neo_ReturnURL: "https://www.google.com/",
+			neo_AgainURL: "https://www.google.com/",
+			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
+		};
+		const hashKey = "123456";
 		neopaySDK.pay(config, hashKey);
 	}
 </script>
