--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script neopay-sdk type="text/javascript"
-	src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk@latest/sdk/neopay-sdk.min.js"></script>
+	src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk/sdk/neopay-sdk.min.js"></script>
 <script>
 	$(document).ready(function () {
 		const neo_PaymmentBaseUrl = "https://uat-api.neopay.vn/pg";
