--- a/example/example.html
+++ b/example/example.html
@@ -57,6 +57,7 @@
 			neo_OrderInfo: `Thanh toán ĐH Test`,
 			neo_Title: 'Thanh toán',
 			neo_ReturnURL: "https://www.google.com/",
+			neo_AgainURL: "https://www.google.com/",
 			neo_ViewType: "POPUP", //POPUP | REDIRECT
 		};
 		const hashKey = "123456";
@@ -77,6 +78,7 @@
 			neo_OrderInfo: `Thanh toán ĐH Test`,
 			neo_Title: 'Thanh toán',
 			neo_ReturnURL: "https://www.google.com/",
+			neo_AgainURL: "https://www.google.com/",
 			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
 		};
 		const hashKey = "123456";
@@ -97,6 +99,7 @@
 			neo_OrderInfo: `Thanh toán ĐH DH001`,
 			neo_Title: 'Thanh toán',
 			neo_ReturnURL: "https://www.google.com/",
+			neo_AgainURL: "https://www.google.com/",
 			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
 		};
 		const hashKey = "123456";
