--- a/example/example-payment.html
+++ b/example/example-payment.html
@@ -13,17 +13,16 @@
 	<br />
 	<br />
 	<button onclick="onPayWithRedirect()">Thanh toán (Redirect)</button>
-	<br />
-	<br />
-	<button onclick="onPayWithDupliceOrderId()">Thanh toán (Mã đơn hàng bị trùng)</button>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script neopay-sdk type="text/javascript"
 	src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk/sdk/neopay-sdk.min.js"></script>
 <script>
+	const MERCHANT_CODE = "RZRGNY";
+	const HASH_KEY = "4F99C21FE8A14FD198FA00D18662A63B"
 	$(document).ready(function () {
-		const neo_PaymmentBaseUrl = "https://uat-api.neopay.vn/pg";
+		const neo_PaymmentBaseUrl = "https://sandbox-api.neopay.vn/pg";
 		const configUI = {
 			neo_HiddenHeader: false,
 			neo_HiddenFooter: true,
@@ -45,65 +44,42 @@
 	})
 	function onPayWithPopup() {
 		const config = {
-			neo_MerchantCode: 'HUYEN1',
-			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
+			neo_MerchantCode: MERCHANT_CODE,
+			neo_PaymentMethod: ["WALLET", "ATM", "CC", "QR"],
 			neo_Currency: 'VND',
 			neo_Locale: 'vi',
 			neo_Version: '1',
 			neo_Command: 'PAY',
 			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
-			neo_MerchantTxnID: 'T23343243',
+			neo_MerchantTxnID: `T${`${Date.now()}`.slice(-8)}`,
 			neo_OrderID: `DH${`${Date.now()}`.slice(-8)}`,
 			neo_OrderInfo: `Thanh toán ĐH Test`,
 			neo_Title: 'Thanh toán',
-			neo_ReturnURL: "https://www.google.com/",
-			neo_AgainURL: "https://www.google.com/",
+			neo_ReturnURL: "https://sandbox-api.neopay.vn/pg/paygate/tryitnow",
+			neo_AgainURL: "https://sandbox-api.neopay.vn/pg/paygate/tryitnow",
 			neo_ViewType: "POPUP", //POPUP | REDIRECT
 		};
-		const hashKey = "123456";
-		neopaySDK.pay(config, hashKey);
+		neopaySDK.pay(config, HASH_KEY);
 	}
 
 	function onPayWithRedirect() {
 		const config = {
-			neo_MerchantCode: 'HUYEN1',
-			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
+			neo_MerchantCode: MERCHANT_CODE,
+			neo_PaymentMethod: ["WALLET", "ATM", "CC", "QR"],
 			neo_Currency: 'VND',
 			neo_Locale: 'vi',
 			neo_Version: '1',
 			neo_Command: 'PAY',
 			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
-			neo_MerchantTxnID: 'T23343243',
+			neo_MerchantTxnID: `T${`${Date.now()}`.slice(-8)}`,
 			neo_OrderID: `DH${`${Date.now()}`.slice(-8)}`,
 			neo_OrderInfo: `Thanh toán ĐH Test`,
 			neo_Title: 'Thanh toán',
-			neo_ReturnURL: "https://www.google.com/",
-			neo_AgainURL: "https://www.google.com/",
+			neo_ReturnURL: "https://sandbox-api.neopay.vn/pg/paygate/tryitnow",
+			neo_AgainURL: "https://sandbox-api.neopay.vn/pg/paygate/tryitnow",
 			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
 		};
-		const hashKey = "123456";
-		neopaySDK.pay(config, hashKey);
-	}
-
-	function onPayWithDupliceOrderId() {
-		const config = {
-			neo_MerchantCode: 'HUYEN1',
-			neo_PaymentMethod: ["WALLET", "ATM", "CC"],
-			neo_Currency: 'VND',
-			neo_Locale: 'vi',
-			neo_Version: '1',
-			neo_Command: 'PAY',
-			neo_Amount: Math.floor(Math.random() * 600000) + 100000,
-			neo_MerchantTxnID: 'T23343243',
-			neo_OrderID: `DH001`,
-			neo_OrderInfo: `Thanh toán ĐH DH001`,
-			neo_Title: 'Thanh toán',
-			neo_ReturnURL: "https://www.google.com/",
-			neo_AgainURL: "https://www.google.com/",
-			neo_ViewType: "REDIRECT", //POPUP | REDIRECT
-		};
-		const hashKey = "123456";
-		neopaySDK.pay(config, hashKey);
+		neopaySDK.pay(config, HASH_KEY);
 	}
 </script>
 
