--- a/example/example-result.html
+++ b/example/example-result.html
@@ -16,7 +16,7 @@
 	src="https://cdn.jsdelivr.net/gh/neopayvn/neopay-pg-js-sdk/sdk/neopay-sdk.min.js"></script>
 <script>
 	$(document).ready(function () {
-		const neo_PaymmentBaseUrl = "https://uat-api.neopay.vn/pg";
+		const neo_PaymmentBaseUrl = "https://sandbox-api.neopay.vn/pg";
 		const configUI = {
 			neo_HiddenHeader: false,
 			neo_HiddenFooter: true
